--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "express": "^4.13.4"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-mocha": "^2.2.0"
   }
 }
