--- a/package.json
+++ b/package.json
@@ -38,8 +38,12 @@
     "express": "^4.13.4"
   },
   "devDependencies": {
+    "body-parser": "^1.15.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0"
+  },
+  "dependencies": {
+    "mongoose": "^4.4.14"
   }
 }
