--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "mocha": "^2.4.5"
   },
   "dependencies": {
-    "mongoose": "^4.4.14",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "forecastio": "1.0.1",
+    "mongoose": "^4.4.14"
   }
 }
