--- a/package.json
+++ b/package.json
@@ -34,13 +34,6 @@
     "url": "https://github.com/cliffhangerz/fairweatherhikers/issues"
   },
   "homepage": "https://github.com/cliffhangerz/fairweatherhikers",
-  "dependencies": {
-    "bcrypt": "latest",
-    "body-parser": "^1.14.2",
-    "express": "^4.13.4",
-    "jsonwebtoken": "^6.1.1",
-    "mongoose": "^4.3.6"
-  },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
@@ -48,5 +41,13 @@
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "express": "^4.13.4",
+    "forecastio": "1.0.1",
+    "mongoose": "^4.3.6",
+    "bcrypt": "latest",
+    "body-parser": "^1.14.2",
+    "jsonwebtoken": "^6.1.1",
   }
 }
