--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "mongoose": "^4.3.6",
     "bcrypt": "latest",
     "body-parser": "^1.14.2",
-    "jsonwebtoken": "^6.1.1",
+    "jsonwebtoken": "^6.1.1"
   }
 }
