zeroing the zerobuffer

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Choose your hiking trail based on weather conditions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/mocha/bin/mocha test",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
