--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cliffhangerz/fairweatherhikers.gi"
+    "url": "git+https://github.com/cliffhangerz/fairweatherhikers.git"
   },
   "keywords": [],
   "author": {
